exports[`Onboarding component should render step with option 1`] = `
<div
  className="wizard photos-backup">
  <header
    className="wizard-header">
    <a
      className="skipLink"
      onClick={[Function]}>
      mobile.onboarding.step.skip
    </a>
  </header>
  <div
    className="wizard-main">
    <div
      className="illustration illustration-undefined" />
    <h1
      className="title">
      mobile.onboarding.undefined.title
    </h1>
    <p
      className="description">
      mobile.onboarding.undefined.description
    </p>
  </div>
  <footer
    className="wizard-footer">
    <button
      className="coz-btn coz-btn--regular"
      onClick={undefined}
      role="button">
      mobile.onboarding.step.button
    </button>
  </footer>
</div>
`;

exports[`Onboarding component should render step without option 1`] = `
<div
  className="wizard photos-backup">
  <header
    className="wizard-header" />
  <div
    className="wizard-main">
    <div
      className="illustration illustration-undefined" />
    <h1
      className="title">
      mobile.onboarding.undefined.title
    </h1>
    <p
      className="description">
      mobile.onboarding.undefined.description
    </p>
  </div>
  <footer
    className="wizard-footer">
    <button
      className="coz-btn coz-btn--regular"
      onClick={undefined}
      role="button">
      mobile.onboarding.step.next
    </button>
  </footer>
</div>
`;
